--- a/index.html
+++ b/index.html
@@ -34,108 +34,121 @@
     </style>
   </head>
   <body
-    class="min-h-screen flex items-center justify-center bg-gradient-to-br from-purple-900 via-blue-900 to-black p-4 sm:p-6 md:p-10"
+    class="bg-gradient-to-br from-purple-900 via-blue-900 to-black text-white min-h-screen flex flex-col"
   >
-    <!-- Main Container -->
-    <div
-      class="flex flex-col md:flex-row items-stretch justify-center w-full max-w-7xl gap-6 min-h-[400px]"
-    >
-      <!-- Weather Box -->
-      <div
-        id="weather"
-        class="bg-black/30 h-full backdrop-blur-lg rounded-xl p-4 sm:p-6 text-white w-full sm:w-auto max-w-sm"
-      >
-        <div class="flex items-center space-x-2 mb-2">
-          <div id="weather-icon" class="text-2xl sm:text-3xl">⟳</div>
-          <div class="text-right flex-1">
-            <div id="temperature" class="text-xl sm:text-2xl font-bold">
-              --°C
-            </div>
-            <div id="weather-desc" class="text-xs sm:text-sm opacity-80">
-              Loading...
-            </div>
-          </div>
-        </div>
-        <div class="border-t border-white/10 pt-2 mt-2 text-xs sm:text-sm">
-          <div>
-            <div class="opacity-70">Location</div>
-            <div id="location" class="font-semibold">--</div>
-          </div>
-        </div>
-        <div
-          class="border-t border-white/10 pt-2 mt-2 text-xs sm:text-sm grid grid-cols-2 gap-2"
-        >
-          <div>
-            <div class="opacity-70">Feels Like</div>
-            <div id="feels-like" class="font-semibold">--°C</div>
-          </div>
-          <div>
-            <div class="opacity-70">Wind Speed</div>
-            <div id="wind-speed" class="font-semibold">-- km/h</div>
-          </div>
-          <div>
-            <div class="opacity-70">Humidity</div>
-            <div id="humidity" class="font-semibold">--%</div>
-          </div>
-          <div>
-            <div class="opacity-70">Heat Index in Celsius</div>
-            <div id="heatindex" class="font-semibold">--°C</div>
-          </div>
-        </div>
-        <button
-          onclick="openModal()"
-          class="mt-4 w-full bg-purple-600 hover:bg-purple-700 transition text-white px-4 py-2 rounded-lg text-sm font-semibold"
-        >
-          More Weather Details
-        </button>
-      </div>
-
-      <!-- Clock Box -->
-      <div
-        class="clock-container bg-black/30 h-full backdrop-blur-lg rounded-2xl p-6 sm:p-8 md:p-10 shadow-2xl border border-white/10 animate-pulse-soft w-full max-w-3xl"
-      >
-        <div
-          class="clock text-4xl sm:text-5xl md:text-6xl lg:text-7xl xl:text-8xl font-bold text-white tracking-wider flex items-center justify-center gap-3 sm:gap-5"
-        >
-          <div class="flex items-center">
-            <span
-              id="hours"
-              class="bg-white/10 rounded-lg px-4 py-3 sm:px-6 sm:py-4"
-              >00</span
-            >
-            <span class="text-purple-400 animate-pulse px-1 sm:px-2">:</span>
-            <span
-              id="minutes"
-              class="bg-white/10 rounded-lg px-4 py-3 sm:px-6 sm:py-4"
-              >00</span
-            >
-            <span class="text-purple-400 animate-pulse px-1 sm:px-2">:</span>
-            <span
-              id="seconds"
-              class="bg-white/10 rounded-lg px-4 py-3 sm:px-6 sm:py-4"
-              >00</span
-            >
-          </div>
-          <span
-            id="ampm"
-            class="text-xl sm:text-2xl md:text-3xl lg:text-4xl text-purple-400 ml-3 sm:ml-4"
-            >AM</span
-          >
-        </div>
-        <div
-          id="date"
-          class="text-center mt-4 text-base sm:text-lg md:text-xl text-purple-200 font-semibold"
-        ></div>
-      </div>
-    </div>
-
-    <!-- Location Request Button for Mobile -->
+    <!-- Enable Location Button (top right corner for mobile only) -->
     <button
       onclick="requestLocation()"
-      class="fixed bottom-4 right-4 bg-purple-700 text-white px-4 py-2 rounded-lg shadow-lg sm:hidden z-50"
+      class="fixed top-4 right-4 bg-purple-700 text-white px-4 py-2 rounded-lg shadow-lg sm:hidden z-50"
     >
       Enable Location
     </button>
+
+    <!-- Main content area -->
+    <main class="flex-grow flex items-center justify-center p-4 sm:p-6 md:p-10">
+      <div
+        class="flex flex-col md:flex-row items-stretch justify-center w-full max-w-7xl gap-6 min-h-[400px]"
+      >
+        <!-- Weather Box -->
+        <div
+          id="weather"
+          class="bg-black/30 h-full backdrop-blur-lg rounded-xl p-4 sm:p-6 w-full sm:w-auto max-w-sm"
+        >
+          <div class="flex items-center space-x-2 mb-2">
+            <div id="weather-icon" class="text-2xl sm:text-3xl">⟳</div>
+            <div class="text-right flex-1">
+              <div id="temperature" class="text-xl sm:text-2xl font-bold">
+                --°C
+              </div>
+              <div id="weather-desc" class="text-xs sm:text-sm opacity-80">
+                Loading...
+              </div>
+            </div>
+          </div>
+          <div class="border-t border-white/10 pt-2 mt-2 text-xs sm:text-sm">
+            <div>
+              <div class="opacity-70">Location</div>
+              <div id="location" class="font-semibold">--</div>
+            </div>
+          </div>
+          <div
+            class="border-t border-white/10 pt-2 mt-2 text-xs sm:text-sm grid grid-cols-2 gap-2"
+          >
+            <div>
+              <div class="opacity-70">Feels Like</div>
+              <div id="feels-like" class="font-semibold">--°C</div>
+            </div>
+            <div>
+              <div class="opacity-70">Wind Speed</div>
+              <div id="wind-speed" class="font-semibold">-- km/h</div>
+            </div>
+            <div>
+              <div class="opacity-70">Humidity</div>
+              <div id="humidity" class="font-semibold">--%</div>
+            </div>
+            <div>
+              <div class="opacity-70">Heat Index in Celsius</div>
+              <div id="heatindex" class="font-semibold">--°C</div>
+            </div>
+          </div>
+          <button
+            onclick="openModal()"
+            class="mt-4 w-full bg-purple-600 hover:bg-purple-700 transition text-white px-4 py-2 rounded-lg text-sm font-semibold"
+          >
+            More Weather Details
+          </button>
+        </div>
+
+        <!-- Clock Box -->
+        <div
+          class="clock-container bg-black/30 h-full backdrop-blur-lg rounded-2xl p-6 sm:p-8 md:p-10 shadow-2xl border border-white/10 animate-pulse-soft w-full max-w-3xl"
+        >
+          <div
+            class="clock text-4xl sm:text-5xl md:text-6xl lg:text-7xl xl:text-8xl font-bold text-white tracking-wider flex items-center justify-center gap-3 sm:gap-5"
+          >
+            <div class="flex items-center">
+              <span
+                id="hours"
+                class="bg-white/10 rounded-lg px-4 py-3 sm:px-6 sm:py-4"
+                >00</span
+              >
+              <span class="text-purple-400 animate-pulse px-1 sm:px-2">:</span>
+              <span
+                id="minutes"
+                class="bg-white/10 rounded-lg px-4 py-3 sm:px-6 sm:py-4"
+                >00</span
+              >
+              <span class="text-purple-400 animate-pulse px-1 sm:px-2">:</span>
+              <span
+                id="seconds"
+                class="bg-white/10 rounded-lg px-4 py-3 sm:px-6 sm:py-4"
+                >00</span
+              >
+            </div>
+            <span
+              id="ampm"
+              class="text-xl sm:text-2xl md:text-3xl lg:text-4xl text-purple-400 ml-3 sm:ml-4"
+              >AM</span
+            >
+          </div>
+          <div
+            id="date"
+            class="text-center mt-4 text-base sm:text-lg md:text-xl text-purple-200 font-semibold"
+          ></div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer
+      class="w-full text-center text-white text-sm opacity-80 py-4 border-t border-white/10 z-10 relative"
+    >
+      <p class="mb-1">
+        Made with <span class="text-red-500">❤️</span> by
+        <strong>Mohammad Hafizur Rahman Sakib</strong>
+      </p>
+      <p>Thanks For Visiting!</p>
+    </footer>
 
     <!-- Modal -->
     <div
