--- a/index.html
+++ b/index.html
@@ -140,12 +140,20 @@
     </main>
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer
-      class="w-full text-center text-white text-sm opacity-80 py-4 border-t border-white/10 z-10 relative"
+      class="w-full text-center text-white text-sm opacity-80 py-4 z-10 relative"
     >
       <p class="mb-1">
         Made with <span class="text-red-500">❤️</span> by
-        <strong>Mohammad Hafizur Rahman Sakib</strong>
+        <a
+          href="https://github.com/Hafiz-Sakib"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="hover:text-purple-400 font-semibold transition"
+        >
+          Mohammad Hafizur Rahman Sakib
+        </a>
       </p>
       <p>Thanks For Visiting!</p>
     </footer>
